@@ -1,6 +1,5 @@
 package pro.sky.exever.employeewebservice;
 
-import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -12,38 +11,41 @@ import pro.sky.exever.employeewebservice.exception.EmployeeNotFoundException;
 @Service
 public class DepartmentServiceImpl implements DepartmentService {
 	private final EmployeeService employeeService;
-	
 	public DepartmentServiceImpl(EmployeeService employeeService) {
 		this.employeeService = employeeService;
 	}
-	
 	@Override
-	public Employee maxSalary(int departmentId) {
-		return employeeService.allEmployees().stream()
+	public int salaryMax(int departmentId) {
+		return employeeService.all().stream()
 				.filter(e -> e.getDepartmentId() == departmentId)
-				.max(Comparator.comparingInt(Employee::getSalary))
+				.mapToInt(Employee::getSalary)
+				.max()
 				.orElseThrow(EmployeeNotFoundException::new);
 	}
 	@Override
-	public Employee minSalary(int departmentId) {
-		return employeeService.allEmployees().stream()
+	public int salaryMin(int departmentId) {
+		return employeeService.all().stream()
 				.filter(e -> e.getDepartmentId() == departmentId)
-				.min(Comparator.comparingInt(Employee::getSalary))
+				.mapToInt(Employee::getSalary)
+				.min()
 				.orElseThrow(EmployeeNotFoundException::new);
 	}
 	@Override
 	public List<Employee> employeesFromDepartment(int departmentId){
-		return employeeService.allEmployees().stream()
+		return employeeService.all().stream()
 				.filter(e -> e.getDepartmentId() == departmentId)
-				.collect(Collectors.toList());
+				.toList();
+	}
+	@Override
+	public int salarySum(int departmentId) {
+		return employeeService.all().stream()
+				.filter(e -> e.getDepartmentId() == departmentId)
+				.mapToInt(Employee::getSalary)
+				.sum();
 	}
 	@Override
 	public Map<Integer, List<Employee>> allEmployeesByDepartment(){
-		return employeeService.allEmployees().stream()
+		return employeeService.all().stream()
 				.collect(Collectors.groupingBy(Employee::getDepartmentId));
 	}
-	
-	
-	
-	
 }
